--- a/src/coms/layout/footer/footer.html
+++ b/src/coms/layout/footer/footer.html
@@ -8,7 +8,7 @@
 	<p>京ICP备 10003979</p>
 	
 	<div class="ctrl-tools">
-		<span class="ctrl-item" ui-sref="systemres" alt="回到首页"><i class="icon-home"></i></span>
-		<span class="ctrl-item" alt="返回顶部" ng-click="goToTop()"><i class="icon-arrow-up"></i></span>
+		<span class="ctrl-item" ui-sref="systemres" title="回到首页"><i class="icon-home"></i></span>
+		<span class="ctrl-item" title="返回顶部" ng-click="goToTop()"><i class="icon-arrow-up"></i></span>
 	</div>
 </div>
