--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -51,8 +51,11 @@
 }
 .user-info-custom{
     margin-bottom: 0;
+    font-size: 14px;
 }
-
+.user-info-custom span>i{
+    margin: 0 3px;
+}
 .user-info li:hover {
     background: #3FBBCF;
     color: #FFFFFF;
