--- a/src/less/res.less
+++ b/src/less/res.less
@@ -27,8 +27,8 @@
     background: #fff;
     margin-top: 15px;
     padding-left: 6px;
-    height: 30px;
-    line-height: 30px;
+    height: 27px;
+    line-height: 27px;
     cursor: pointer;
 }
 
@@ -41,10 +41,9 @@
     font-size: 18px;
     margin: 1px;
     margin-left: 5px;
-    padding: 1px 0 1px 5px;
-    margin-right: 5px;
+    padding: 2px 0 2px 5px;
+    margin-right: 1px;
     color: #fff;
-    width: 15px;
 }
 .menu-drop .icon-angle-up{
     display: none;
@@ -255,13 +254,15 @@
     background: #DDD;
     color: #5d5d5d;
     font-size: 17px;
-    padding: 5px 15px;
+    line-height: 40px;
     
 }
 .res-header-catogry .catogry-item{
-    padding: 2px 3px;
-    margin: 3px 1px;
+    padding: 8.5px 1%;
     cursor: pointer;
+}
+.res-header-catogry .catogry-item:first-child{
+    margin-left: 20px;
 }
 //.catogry-item:before{
 //  content: url('assets/img/lib_before.png');
