--- a/src/coms/res-custom/views/customres-content.html
+++ b/src/coms/res-custom/views/customres-content.html
@@ -39,7 +39,7 @@
 
 		<div class="prepare-all-list" ng-repeat="subject in VM.resource">
 			<div class="prepare-all-header">
-				<img class="prepare-all-header-img" src="../../../assets/img/custom/head.png" />
+				<img class="res-custom-header-img" src="../../../assets/img/custom/head.png" />
 				<span class="subject">{{subject.subject.name}}</span>
 				<!--<div class="coms-pagination">
 					<uib-pagination total-items="VM.bigTotalItems[$index]" ng-model="VM.bigCurrentPage[$index]" max-size="maxSize" boundary-link-numbers="true" previous-text="&lsaquo;" next-text="&rsaquo;" ng-change="pageChanged($index)"></uib-pagination>
