--- a/src/coms/search/views/search.html
+++ b/src/coms/search/views/search.html
@@ -71,7 +71,7 @@
 		</div>
 		<div class="pageBox">
 			<div class="coms-pagination">
-				<uib-pagination num-pages="pageSize" total-items="bigTotalItems" ng-change="changePage()" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+				<uib-pagination items-per-page="perPage"  total-items="bigTotalItems" ng-change="changePage()" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
 					<input class="page-input" ng-model="pageTo" />
