--- a/src/coms/search/views/search.html
+++ b/src/coms/search/views/search.html
@@ -67,7 +67,7 @@
 			<label for="test"></label>
 			<!--<input type="checkbox" ng-checked="allCheck" ng-model="allCheck" class="allCheck" ng-checked="allCheck">本页全选-->
 			<span ><span class="all">共{{listLength}}条，每页显示</span><input type="text" value="10"  ng-change="changePerPage()" ng-model="inputPerPage"/></span>条
-			<label class="res-download allDown" ng-click="downLoadSelect()"><i class="icon-download-alt"></i>批量下载</label>
+			<label class="res-download allDown" ng-click="downLoadSelect()"><i class="icon-download-alt"></i>打包下载</label>
 		</div>
 		<div class="pageBox">
 			<div class="coms-pagination">
