--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -24,7 +24,7 @@
 					<p class="upload-tips-icon"><i class="icon-exclamation-sign"></i> 支持格式：</p>
 					<div class="upload-tips-text">
 						<p>图片：.jpg、.gif、.png，最大5M;</p>
-						<p>文本：.doc/.docx/.dot/.dotm/.docm、.ppt/.pptx/.pot/.potm/.pptm、<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.xls/.xlsx/.xlsm、.pdf/.txt/.caj/.kdh/.teb，最大30M;</p>
+						<p>文本：.doc/.docx/.dot/.dotm/.docm、.ppt/.pptx/.pot/.potm/.pptm、<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.xls/.xlsx/.xlsm、.pdf/.txt，最大30M;</p>
 						<p>动画：.swf、.gsp(几何画板)，最大10M；</p>
 						<p>音频：.mp3、.wma、.wav，最大10M；</p>
 						<p>视频：.mp4（其他格式请用格式工厂类软件转为mp4）最大150M；</p>
