--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -1,5 +1,5 @@
 ﻿<div class="container" style="position: relative;">
-		<button class="btn btn-success new-prepare" ng-click="newPrepare()">新建</button>
+		<button class="btn btn-new-prepare new-prepare" ng-click="newPrepare()">新建备课夹</button>
 </div>
 <div class="empty-nav empty-nav-custom"></div>
 <div class="container" id="prepare-container">
