--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -159,6 +159,11 @@ input[type=checkbox] + label {
     z-index: 999;
 }
 
+.res-ul-thubmlist input[type=checkbox] + label {
+    top: 8%;
+    left:200px;
+}
+
 input[type=checkbox] + label:after {
     opacity: 0;
     content: '';
@@ -197,4 +202,20 @@ input[type=checkbox]:checked + label:after {
 }
 .progressContainer .status{
     display: none;
+}
+
+// 按钮
+.btn-general{
+    border: none;
+}
+.btn-general:hover{
+    background: #41C9A9;
+}
+.btn-new-prepare{
+    background: #41C9A9;
+    color: #fff;
+}
+.btn-new-prepare:hover{
+    background: #9FE2CF;
+    color: #219B81;
 }
