--- a/src/less/res.less
+++ b/src/less/res.less
@@ -376,7 +376,7 @@
 }
 .res-thubmlist-info{
     font-size: 13px;
-    padding-top: 210px;
+    padding-top: 190px;
 }
 .res-thubmlist-info label{
     margin: 5px 0;
@@ -485,7 +485,7 @@
   border-bottom: 1px dashed #9b9b9b;
   padding: 8px;
   margin: 8px 0;
-  height: 350px;
+  height: 330px;
 }
 .res-list-main .res-thubmlist-item:hover{
     background: #e6f4f4;
@@ -560,14 +560,31 @@
 }
 
 .addPrepare-custom{
-    width: 115px;
+    width: 105px;
     font-size: 15px;
-    float: right;
+    float: left;
     height: 40px;
     margin-top: 5px;
     position: relative;
-    margin-left: 5px !important;
-    margin-right: 10px;
+    margin-left: 15px !important;
+    margin-right: 0;
+    font-size: 13px;
+}
+.addPrepare-custom .icon-sort-down-custom {
+    position: absolute;
+    width: 20px;
+    text-align: center;
+    top: 13px;
+    left: 80px;
+}
+.add-prepare-thumb {
+    font-size: 13px;
+    position: absolute;
+    left: 108px;
+    top: 6px;
+    color: #fff;
+    cursor: pointer;
+    
 }
 .thubmlist-tools-custom .res-download{
     float: left;
@@ -846,14 +863,14 @@
 .img-thumb2-list{
     position: absolute;
     line-height: 200px;
-    width: 238px;
-    height: 200px;
+    width: 218px;
+    height: 190px;
     background: #ddd;
     text-align: center;
     overflow: hidden;
 }
 .img-thumb2-list>img{
-    max-width: 222px;
+    max-width: 202px;
     max-height: 200px;
     line-height: 200px;
 }
