--- a/src/coms/message/views/message.html
+++ b/src/coms/message/views/message.html
@@ -1,7 +1,7 @@
 ﻿<div class="empty-nav"></div>
 <div class="container" id="message-container">
 	<header class="head">
-		<span class="numBox">消息记录<span>（1）</span></span>
+		<span class="numBox">消息记录<span> </span></span>
 		<div class="deleteBox"><span class="glyphicon glyphicon-trash"></span>清空所有</div>
 	</header>
 	<ul class="mes_list">
@@ -11,14 +11,14 @@
 				<show-time item-date data-value="{{list.time | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
 			</div>
 			<div class="mes_content">
-				通知：{{list.content}}
+				<!--通知：{{list.content}}-->
 			</div>
 		</li>
 		
 	</ul>
 	<div class="mes_pagination">
 		<div>
-			<span>共25条，每页显示<input type="text" value="" class="num"/>条</span>
+			<span>共0条，每页显示<input type="text" value="" class="num"/>条</span>
 		</div>
 		<div class="page">
 			<div class="coms-pagination">
