--- a/src/less/header.less
+++ b/src/less/header.less
@@ -66,22 +66,23 @@
 #header .main-nav li:first-child{
     margin-left: 0;
 }
-.main-nav li>span{
+.nav>li>a{
+    padding: 0;
+}
+.main-nav li>a{
     color:#fff;
     font-size: 18px;
     padding: 0;
-    line-height: 46px;
-    padding: 6px 10px;
+    line-height: 45px;
 }
 #header .main-nav li:hover{
     background: #EC80AF;
     border-radius: 6px;
 }
-.main-nav li>span:hover{
+.main-nav li>a:hover,.main-nav li>a:active,.main-nav li>a:focus{
     background: #EC80AF;
     border: 1px dashed #fff;
-    border-radius: 6px;
-    
+    border-radius: 6px; 
 }
 .main-nav .onactive{
     background: #EC80AF;
