--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -3,9 +3,9 @@
 	<div class="header-top container headroom" id="header-top">
 		<img ui-sref="systemres" class="logo" src="assets/img/logo.png" />
 		<ul class="message">
-			<li><a ui-sref="settings"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
-			<li><a ui-sref="message" target="_new">消息</a></li>
-			<li><a ui-sref="help" target="_new">帮助中心</a></li>
+			<li><a ui-sref="settings" target="_blank"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
+			<li><a ui-sref="message" target="_blank">消息</a></li>
+			<li><a ui-sref="help" target="_blank">帮助中心</a></li>
 			<li><a ng-click="logout()">退出</a></li>
 		</ul>
 	</div>
@@ -20,13 +20,13 @@
 	<div class="main-nav nav-pills headroom" id="main-nav">
 		<div class="container">
 			<ul class="nav">
-				<li><span ui-sref="systemres"ng-class="{'onactive':isActive('systemres')}">系统资源</span></li>
-				<li><span ui-sref="schoolres" ng-class="{'onactive':isActive('schoolres')}">校本资源</span></li>
-				<li><span ui-sref="areares"  ng-class="{'onactive':isActive('areares')}">区本资源</span></li>
-				<li><span ng-click="goToSpace()">学生学习空间</span></li>
-				<li><span ui-sref="customres" ng-class="{'onactive':isActive('customres')}">资源定制</a></li>
-				<li class="shopping-cart nav-custom"><span ui-sref="prepare"  ng-class="{'onactive':isActive('prepare')}"><img src="assets/img/shopcart.png"/>备课夹</span></li>
-				<li class="nav-custom"><span ui-sref="personalcenter" ng-class="{'onactive':isActive('personalcenter')}"><img src="assets/img/profile.png"/>个人中心</span></li>
+				<li><a ui-sref="systemres"ng-class="{'onactive':isActive('systemres')}">系统资源</a></li>
+				<li><a ui-sref="schoolres" ng-class="{'onactive':isActive('schoolres')}">校本资源</a></li>
+				<li><a ui-sref="areares"  ng-class="{'onactive':isActive('areares')}">区本资源</a></li>
+				<li><a ng-click="goToSpace()">学生学习空间</a></li>
+				<li><a ui-sref="customres" ng-class="{'onactive':isActive('customres')}">资源定制</a></li>
+				<li class="shopping-cart nav-custom"><a ui-sref="prepare"  ng-class="{'onactive':isActive('prepare')}" target="_blank"><img src="assets/img/shopcart.png"/>备课夹</a></li>
+				<li class="nav-custom"><a ui-sref="personalcenter" ng-class="{'onactive':isActive('personalcenter')}"><img src="assets/img/profile.png"/>个人中心</a></li>
 			</ul>
 		</div>
 	</div>
