--- a/src/coms/layout/header/header3.html
+++ b/src/coms/layout/header/header3.html
@@ -5,9 +5,9 @@
 			<img ui-sref="systemres" class="section-logo" ng-src="assets/img/{{pageLogo}}/{{pageLogo}}.png" />
 			<span class="section-title">{{pageTitle}}</span>
 			<ul class="message">
-				<li><a ui-sref="settings"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
-				<li><a ui-sref="message" target="_new">消息</a></li>
-				<li><a ui-sref="help" target="_new">帮助中心</a></li>
+				<li><a ui-sref="settings" target="_blank"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
+				<li><a ui-sref="message" target="_blank">消息</a></li>
+				<li><a ui-sref="help" target="_blank">帮助中心</a></li>
 				<li><a ng-click="logout()">退出</a></li>
 			</ul>
 		</div>
