--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -103,6 +103,7 @@
 .preview-content{
     background: #fff;
     padding: 15px;
+    min-height: 600px;
 }
 .res-intro{
     border: 1px dashed #666;
