--- a/src/less/res.less
+++ b/src/less/res.less
@@ -516,13 +516,13 @@
 }
 .res-prepare-list{
     position: absolute;
-    right: -30px;
+    right: -13px;
     top:27px;
     background: #fff;
     padding: 0 20px;
     display: none;
     color: #999;
-    width: 200px;
+    width: 180px;
     z-index: 99999;
     border: 2px solid #41C9A9;
 }
@@ -546,7 +546,7 @@
 .res-prepare-thumb{
     bottom: 40px;
     width: 100%;
-    right:-25px;
+    right:0;
     line-height: 25px;
     position: absolute;
     background: #fff;
@@ -629,6 +629,7 @@
     width: 20px;
     color: #fff;
     margin-left: 8px;
+    text-decoration: none;
 }
 .prepare-fixed  .prepare-shop{
     float: left;
@@ -636,6 +637,8 @@
     padding: 5px;
     position: relative;
     border-radius: 3px;
+    display: block;
+    text-decoration: none;
 }
 .prepare-fixed  .prepare-ctrls{
     position: fixed;
