--- a/src/coms/layout/views/prepare/prepare-add.html
+++ b/src/coms/layout/views/prepare/prepare-add.html
@@ -1,16 +1,16 @@
 <!-- 备课夹悬浮  -->
 <div class="prepare-fixed">
-	<div class="prepare-shop" ui-sref="prepare">
+	<a class="prepare-shop" ui-sref="prepare" target="_blank">
 		<img src="assets/img/shopcart.png" />
 		<span class="shop-count">{{ shopCount }}</span>
 		<div class="prepare-text">备课夹</div>
-	</div>
-	<div class="prepare-ctrls">
+	</a>
+	<a class="prepare-ctrls" ui-sref="prepare" target="_blank">
 		<div class="ctrls-prepare-list">
 			<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index">{{$index+1}}、{{item.title}} <span class="prepare-num">({{item.contentNumber}})</span></div>
 			<!--<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>-->
 		</div>
-	</div>
+	</a>
 </div>
 
 <!-- 选择加入 备课夹-->
