--- a/src/coms/res-preview/views/comment.html
+++ b/src/coms/res-preview/views/comment.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="bottom-fixed">
-	<div class="fix-inner">
+	<div class="fix-inner container">
 		<span class="comment-star" ng-hide="VM.comShow">
 				<i class="icon-star" ng-repeat="star in showStar" ng-class="{'starLight':curStar[$index],'starHover':hoverStar[$index]}" ng-mouseover="mouseOverStar($index)" ng-mouseout="mouseOutStar($index)" ng-click="starClick($index)"></i>
 		</span>
