--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -209,6 +209,10 @@
     width: 100% !important;
     min-height: 700px;
 }
+.slide-list-container {
+    background: #5D5D5D;
+    padding-bottom: 20px;
+}
 #preview-container .slide_head .type_box{
     height: 30px;
     width: 60%;
@@ -278,7 +282,6 @@
 }
 #preview-container .fix-inner
 {
-    width: 70%;
     margin: 0 auto;
     height: 100%;
     color: #fff;
