--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -41,14 +41,16 @@
 				</div>
 			</div>-->
 		</div>
-		<div class="slide-list">
-			<div class="slide-list-item" ng-repeat="item in VM.allSourceList" ng-click="slideChange(item.id,$index,item.fromFlag)">
-				<div class="img-box" ng-class="curImg[$index]?'line':''">
-					<img ng-src="{{ item.thumbnailpath ? item.thumbnailpath: 'null'}}"  fallback-src="{{item.fileExt | lowercase}}">
+		<div class="slide-list-container">
+			<div class="slide-list">
+				<div class="slide-list-item" ng-repeat="item in VM.allSourceList" ng-click="slideChange(item.id,$index,item.fromFlag)">
+					<div class="img-box" ng-class="curImg[$index]?'line':''">
+						<img ng-src="{{ item.thumbnailpath ? item.thumbnailpath: 'null'}}"  fallback-src="{{item.fileExt | lowercase}}">
+					</div>
+					<span class="text-ellipsis">{{item.title}}</span>
 				</div>
-				<span class="text-ellipsis">{{item.title}}</span>
+				<!--<div class="more" ng-click="getAllSourceMore()" ng-hide="VM.resShow">加载更多</div>-->
 			</div>
-			<!--<div class="more" ng-click="getAllSourceMore()" ng-hide="VM.resShow">加载更多</div>-->
 		</div>
 		
 	</div>
