--- a/src/less/res.less
+++ b/src/less/res.less
@@ -507,6 +507,13 @@
     color: #34b193;
     background: url('assets/img/not_found.png') no-repeat;
 }
+.noDataCtrlCustom{
+    padding-top: 30px;
+    height: 520px;
+}
+.noDataCtrlCustom img{
+    width: 100%;
+}
 // 列出备课夹
 .addPrepare:hover .res-prepare-list,.addPrepare:hover .res-prepare-thumb,.addPrepareAll:hover .res-prepare-all{
     display: block;   
