--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -336,7 +336,7 @@
 }
 
 .self-avatar-panel li:first-child {
-    margin-top: 0;
+    margin-top: 60px;
 }
 
 .self-avatar-panel li:last-child {
@@ -401,8 +401,6 @@
 
 .hint-three {
     position: absolute;
-    bottom: 5px;
-    right: 5px;
     color: #666666;
     font-size: 1.4rem;
 }
@@ -449,4 +447,25 @@
 
 .message-modal-body button {
     background-color: #3FBBCF;
+}
+.cropArea {
+    margin-left: 15px;
+    overflow: hidden;
+    width:450px;
+    height:350px;
+}
+.avatar-thumb img{
+    width: 100px;
+}
+.avatar-tab-second{
+    margin-left: -25px;
+}
+.thumb-avatar1{
+    width: 250px;
+}
+.thumb-avatar2{
+    width: 180px;
+}
+.thumb-avatar3{
+    width: 105px;
 }
