fix prepare color

--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -39,6 +39,10 @@
         cursor: pointer;
         position: relative;
     }
+    
+    .header-gray{
+        background: #ddd;
+    }
 
     .list-header-title{
         color: #0094CE;
