--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -14,10 +14,14 @@
 .upload-file-content, .upload-network-content{
     background: #fff;
     padding: 30px;
+    padding-bottom: 0;
     border: 2px #41C9A9 solid;
     border-top: 8px #41C9A9 solid;
     text-align: center;
     min-height: 300px;
+}
+.modal-footer-img{
+    width: 100%;
 }
 .upload-modal .modal-prepare-header{
     text-align: center;
@@ -150,6 +154,10 @@
 }
 .upload-url-input{
     width: 300px;
+    display: inline-block;
+}
+.upload-network-content img{
+    width: 100%;
 }
 .upload-modal .edit-detail-box input{
     width: 400px;
