--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -41,6 +41,7 @@
 				<button ng-disabled="uploadDisable" class="btn btn-lg btn-success btn-general" ngf-select="uploadFiles($files, $invalidFiles)" ng-model="file" name="file" ngf-pattern="'{{formats}}'" ngf-accept="'{{formats}}'"  ngf-max-size="150MB">
 					<i class="icon-upload-alt"></i> 上传
 				</button>
+				<br><br>
 			</div>
 			<div class="continue-upload" ng-hide="firstUpload">
 				<table class="table">
@@ -81,14 +82,18 @@
 
 				<!--<button class="btn-general" ngf-select="uploadFiles($files, $invalidFiles)" ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="150MB">继续添加</button>-->
 				<button ng-disabled="uploadFinish" class="btn btn-lg btn-success btn-general" ng-click="uploadResInfo()">完 成</button>
+				<br><br>
+				<img class="modal-footer-img" src="assets/img/modal/modal-footer.png">
 			</div>
 		</div>
 		<!--添加网络资源-->
 		<div class="upload-network-content" ng-show="!isLocal">
 			<div class="first-upload">
 				<br><br>
-				输入网址：<input ng-model="uploadWebUrl" class="upload-url-input"/><br><br><br><br>
+				输入网址：<input ng-model="uploadWebUrl" class="form-control upload-url-input"/><br><br><br><br>
 				<button class="btn btn-success btn-general" ng-click="uploadResInfo(true)"><i class="icon-upload-alt" ></i> 上 传</button>
+				<br><br><br>
+				<img src="assets/img/modal/modal-footer.png">
 			</div>
 		</div>
 	</div>
