--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -25,7 +25,7 @@
 				<li><a ui-sref="areares"  ng-class="{'onactive':isActive('areares')}">区本资源</a></li>
 				<li><a ng-click="goToSpace()">学生学习空间</a></li>
 				<li><a ui-sref="customres" ng-class="{'onactive':isActive('customres')}">资源定制</a></li>
-				<li class="shopping-cart nav-custom"><a ui-sref="prepare"  ng-class="{'onactive':isActive('prepare')}" target="_blank"><img src="assets/img/shopcart.png"/>备课夹</a></li>
+				<li class="shopping-cart nav-custom"><a ng-click="goToPrepare()"><img src="assets/img/shopcart.png"/>备课夹</a></li>
 				<li class="nav-custom"><a ui-sref="personalcenter" ng-class="{'onactive':isActive('personalcenter')}"><img src="assets/img/profile.png"/>个人中心</a></li>
 			</ul>
 		</div>
